@@ -1,3 +1,9 @@
+2003-03-11  Mark Salter  <msalter@redhat.com>
+
+	* src/stand_alone/eth_drv.c (eth_drv_stop): Uncomment, make non-static,
+	and use __local_enet_sc.
+	* include/eth_drv.h: Add extern decl for eth_drv_stop.
+
 2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>
 
 	* cdl/eth_drivers.cdl: Add doc link.
